cabal-version: 2.4
name: onirim
version: 0

executable onirim
  main-is: Main.hs
  build-depends:
      base
    , random-shuffle
    , monad-loops
    , lens
    , generic-lens
  default-extensions:
      ScopedTypeVariables
    , OverloadedStrings
    , DerivingStrategies
    , DeriveGeneric
    , TypeApplications
    , DataKinds
  ghc-options: -Wall
